--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./icons/css/all.css" />
-    <link rel="stylesheet" href="./node_modules/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
@@ -2931,7 +2931,7 @@
       <!--end fix-btn-->
     </div>
     <script src="./icons/js/all.js"></script>
-    <script src="./node_modules/swiper/swiper-bundle.min.js"></script>
+    <script src="./swiper/swiper-bundle.min.js"></script>
     <script>
       var swiper = new Swiper(".firstSlider", {
         spaceBetween: 0,
